# vagment

./: .gitignore  Cargo.toml  README.md  install
src/: app.rs  lib.rs  logger.rs  machine.rs  macros.rs  main.rs
src/app/: args.rs  cli.rs  command.rs  errors.rs  formatter.rs  logger.rs  machine.rs  mod.rs  number.rs  vagrant.rs
