[package]
name = "vagment"
version = "0.3.0"
authors = ["Mickael Vieira <contact@mickael-vieira.com>"]
description = "A simple command line tool to manage your Vagrant Virtual Machines."
homepage = "https://github.com/mickaelvieira/vagment"
repository = "https://github.com/mickaelvieira/vagment"
documentation = "https://github.com/mickaelvieira/vagment"
readme = "README.md"
license = "MIT"

[dependencies]
ansi_term = "^0"
clap = "^2"
